--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,8 +38,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runners shell
+    - uses: actions/checkout@v4
+    - name: check folder
+      run: ls -l
     - name: Send greeting
-      run: mysql -u gestor -p Abcd1234 -h ${{ input.name }} < ${{ input.query }}
-
- 
- 
+      run: mysql -h ${{ github.event.inputs.name }} -u gestor -p'Abcd1234'
